--- a/index.html
+++ b/index.html
@@ -12,34 +12,30 @@
 
 <body>
     <div class="container">
-        <button class="close-btn">X</button>
+        <div class="loading">
+            <div class="loading-bg"></div>
+            <i class="fa-regular fa-envelope"></i>
+        </div>
         <div class="wrapper">
-
             <div class="contact">
-                <h3>Email Us</h3>
-                <!-- <div class="alert">Your message has been sent</div> -->
+                <button id="close-btn">X</button>
+                <h3>Contact Us</h3>
                 <form id="contactForm">
                     <p>
                         <label>Name</label>
-                        <input type="text" name="name" id="name">
+                        <input type="text" name="name" id="name" placeholder="Enter name">
                     </p>
-                    <!-- <p>
-                        <label>Company</label>
-                        <input type="text" name="company" id="company">
-                    </p> -->
                     <p>
                         <label>Email Address</label>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" placeholder="Enter email">
                     </p>
-                    <!-- <p>
-                        <label>Phone Number</label>
-                        <input type="text" name="phone" id="phone">
-                    </p> -->
                     <p class="full">
                         <label>Message</label>
-                        <textarea name="message" rows="5" id="message"></textarea>
+                        <textarea name="message" rows="5" id="message" placeholder="Enter message"></textarea>
                     </p>
-                    <button type="submit"><span>Submit</span> <i class="fa-solid fa-arrow-right"></i></button>
+                    <button type="submit" class="submit-btn"><span>Submit</span>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
                 </form>
             </div>
         </div>
