--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="wrapper">
             <div class="contact">
                 <button id="close-btn">X</button>
-                <h3>Contact Us</h3>
+                <h3>Email Us</h3>
                 <form id="contactForm">
                     <p>
                         <label>Name</label>
